# neosqlite

./: .gitignore  .hgtags  .markdownlint.json  .readthedocs.yaml  CHANGELOG.md  LICENSE  PyMongo_API_Comparison.md  README.md  example_tokenizer_usage.py  mypy.ini  nosqlite.py  pyproject.toml  setup.py  test_native_index.py  tests.py  tox.ini
.github/: FUNDING.yml
docs/: README.md  regenerate_docs.py
documents/: ADDITIONAL_GROUP_OPERATIONS.md  ADVANCED_INDEX_AWARE_OPTIMIZATION.md  ADVANCED_UNWIND_OPTIONS.md  AGGREGATION_EXPRESSION_GUIDE.md  AGGREGATION_PIPELINE_ENHANCEMENTS.md  AGGREGATION_PIPELINE_OPTIMIZATION.md  ANALYSIS_SUMMARY.md  API_DEVELOPMENT_STRATEGY.md  API_FEASIBILITY_ASSESSMENT.md  AUTOVACUUM.md  AUTOVACUUM_MIGRATION.md  COLLECTION_MODULE_REFACTORING_PLAN.md  COMPREHENSIVE_TEST_SUITE.md  DATABASE_MAINTENANCE.md  ENHANCED_AGGREGATION_INTEGRATION.md  ENHANCED_MULTIPLE_UNWIND_STAGES.md  ENHANCED_UNWIND_GROUP_OPTIMIZATION.md  EXPR_IMPLEMENTATION.md  FACET_IMPLEMENTATION.md  FALLBACK_KILL_SWITCH_PATCH.md  FORCE_FALLBACK_KILL_SWITCH.md  GRIDFS.md  GRIDFS_MIGRATION.md  GRIDFS_MISSING_FEATURES.md  HYBRID_PIPELINE_OPERATIONS.md  HYBRID_TEXT_SEARCH_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  JSON_EACH.md  JSON_EACH_ENHANCEMENTS.md  JSON_EACH_ENHANCEMENTS_SUMMARY.md  JSON_EACH_ENHANCEMENT_ROADMAP.md  JSON_EACH_UNWIND_INTEGRATION.md  LOOKUP_IMPLEMENTATION.md  NESTED_ARRAY_UNWIND.md  ObjectId_IMPLEMENTATION.md  ObjectId_Implementation_Plan.txt  PERFORMANCE_OPTIMIZATION.md  PIPELINE_CACHING.md  PyMongo_API_Comparison.md  SQL_OPTIMIZATION_BENCHMARK_RESULTS.md  (+24 more)
examples/: DATETIME_PERFORMANCE_EXPLANATION.md  README.datetime.md  README.md  advanced_index_aware_optimization.py  aggregation_pipeline_analysis.py  api_comparison.py  api_comparison_comprehensive.py  api_comparison_main.py  benchmark_stable_temp_table_names.py  benchmark_with_quez_stats.py  binary_usage_example.py  clear_memory_benefits.py  complex_logical_operators.py  complex_pipeline_with_temporary_tables.py  comprehensive_legacy_gridfs_test.py  comprehensive_quez_test.py  comprehensive_sql_optimization_benchmark.py  contains_operator.py  contains_or_test.py  contains_performance.py  contains_simple_test.py  contains_vs_regex.py  custom_tokenizer_example.py  datetime_indexing_performance.py  datetime_neosqlite_mongodb_comparison.py  datetime_performance_comparison.py  datetime_performance_explanation.py  datetime_pymongo_compatibility.py  datetime_queries_advanced.py  datetime_queries_basic.py  datetime_three_tier_performance.py  debug_contains_or.py  debug_query_building.py  debug_unwind_group_mismatch.py  debug_unwind_sql_execution.py  debug_where_clause.py  demo_watch_fixed.py  demo_watch_simple.py  deterministic_temp_table_names_example.py  enhanced_sql_optimization_benchmark.py  (+68 more)
neosqlite/: __init__.py  _sqlite.py  aggregation_cursor.py  binary.py  bulk_operations.py  changestream.py  client_session.py  collection.py  connection.py  cursor.py  exceptions.py  index_model.py  migration.py  neosqlite.py  objectid.py  options.py  query_operators.py  raw_batch_cursor.py  requests.py  results.py  sql_utils.py  temporary_table_aggregation.py
pynosqlite/: __init__.py
scripts/: check_logging.py  code-format.ps1  code-format.sh  lint-check-and-fix.sh  run-api-benchmark.sh  run-api-comparison.sh  run-api-nx-27017.sh  runtest.ps1  runtest.sh  runtest2.sh
tests/: CONSOLIDATION_PLAN.md  conftest.py  debug_hybrid.py  test_add_fields_fallback.py  test_add_fields_temp_table.py  test_addfields_after_lookup.py  test_addional_group_accumulators.py  test_additional_group_operations.py  test_advanced_group_accumulators.py  test_aggregation.py  (+184 more)
(+402 files in other folders)
