[tool.poetry]
name = "nosqlite"
version = "0.0.5"
description = "A wrapper for sqlite3 to have schemaless, document-store features"
authors = ["Chaiwat Suttipongsakul <cwt@bashell.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hg.sr.ht/~cwt/nosqlite"
repository = "https://hg.sr.ht/~cwt/nosqlite"
keywords = ["nosql", "sqlite", "nosqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
