[tool.poetry]
name = "pynosqlite"
version = "0.1.1"
description = "A wrapper for sqlite3 to have schemaless, document-store features"
authors = ["Chaiwat Suttipongsakul <cwt@bashell.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hg.sr.ht/~cwt/nosqlite"
repository = "https://hg.sr.ht/~cwt/nosqlite"
keywords = ["nosql", "sqlite", "nosqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^5.0"
mypy = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
