[tool.poetry]
name = "neosqlite"
version = "1.14.6"
description = "NoSQL for SQLite with PyMongo-like API"
authors = ["Chaiwat Suttipongsakul <cwt@bashell.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cwt/neosqlite"
documentation = "https://neosqlite.readthedocs.io/en/latest/"
repository = "https://github.com/cwt/neosqlite"
keywords = ["nosql", "sqlite", "pymongo"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"SourceHut Mirror" = "https://sr.ht/~cwt/neosqlite"

[tool.poetry.dependencies]
python = "^3.10, <3.15"
pysqlite3-binary = { version = "^0.5.4", optional = true }
sphinx = [
    { version = ">=8.1.3,<9.0.0", python = "<3.12", optional = true },
    { version = ">=9.1.0,<9.2.0", python = ">=3.12", optional = true }
]
furo = { version = "^2025.7.19", optional = true }
quez = { version = "^1.1.1", optional = true }
pymongo = { version = "^4.16.0", optional = true }
uvloop = { version = "^0.22.0", optional = true }
nx-27017 = { version = "^0.6.0", optional = true }

[tool.poetry.extras]
jsonb = ["pysqlite3-binary"]
docs = ["sphinx", "furo"]
memory-constrained = ["quez"]
nx27017 = ["pymongo", "nx-27017"]
nx27017_speed = ["pymongo", "nx-27017", "uvloop"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.1"
mypy = "^1.17"
pytest-xdist = "^3.8.0"

[tool.pyright]
stubPath = "typings"

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
